tests/ui/diagnostic_namespace/on_type_error/on-type-error-const-generic.stderr
warning: `#[diagnostic::on_type_error]` only supports exactly one ADT generic parameter, but found `2`
  --> $DIR/on-type-error-const-generic.rs:6:13
   |
LL | struct Array<T, const N: usize>([T; N]);
   |             ^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(malformed_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

error[E0308]: mismatched types
  --> $DIR/on-type-error-const-generic.rs:15:28
   |
LL |     let _: Array<i32, 4> = other;
   |            -------------   ^^^^^ expected `Array<i32, 4>`, found `OtherArray<i32, 4>`
   |            |
   |            expected due to this
   |
   = note: custom on_type_error note: expected `Array<i32, 4>`, found `OtherArray<i32, 4>`
   = note: expected struct `Array<i32, 4>`
              found struct `OtherArray<i32, 4>`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
